# sat_solver

./: CMakeLists.txt  constansts_and_typedefs.h  dpll_solver.cpp  example_sat1  example_unsat1  example_unsat3  formula_presentation.h  interpretation.h  main.cpp  memento_state_pattern.h  parser.h  solver.h  tseitin_transformation.h
graph_task_via_sat/: graph_task.py
minesweep_via_sat/: requirements.txt  solver.py
